--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
             <p> Call me about water:
                 911
             </p>
+            <section class="gallery">
+                <h3>Places to store water:</h3>
+                <div class="gallery-images">
+                    <img src="waterbottle.jpeg" alt="Image 1">
+                    <img src="waterbottle.jpeg" alt="Image 2">
+                    <img src="waterbottle.jpeg" alt="Image 3">
+                    <img src="waterbottle.jpeg" alt="Image 4">
+                    <img src="waterbottle.jpeg" alt="Image 5">
+                    <img src="waterbottle.jpeg" alt="Image 6">
+                    </div>
+                    
+            </section>
         </section>
     </main>
 
